<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="exampleVersion">Version 0.9d</string>
    <string name="busybox">Download BusyBox</string>
    <string name="isbusybox">Is BusyBox Installed?</string>
    <string name="isRootAvailable">Is Your Device Rooted?</string>
    <string name="isAccessGiven">Check For Access</string>
    <string name="copyright">Copyright \u00A9 2013 Autumn Bomb Apps</string>
    <string name="view">View License</string>
    <string name="roottoolsview">Root Tools</string>
    <string name="library">Open Source Licenses for Libraries</string>
    <string name="app_name">Holo Root Check</string>
    <string name="license">Holo Root Check Licensed under the Apache License, Version 2.0</string>
    <string name="roottools">RootTools by Stephen Erickson, Chris Ravenscroft, Dominik Schuermann, Adam Shanksnis Licensed under the Apache License, Version 2.0</string>
    <string name="apache"> This file is part of the RootTools Project - http://code.google.com/p/roottools
 \n\n
    Copyright \u00A9 2013 Stephen Erickson, Chris Ravenscroft, Dominik Schuermann, Adam Shanks
 \n\n
    This code is dual-licensed under the terms of the Apache License Version 2.0 and
    the terms of the General Public License (GPL) Version 2.
\n\n
    The terms of each license can be found in the root directory of this project\'s repository as well as at:
\n\n
    * http://www.apache.org/licenses/LICENSE-2.0\n
    * http://www.gnu.org/licenses/gpl-2.0.txt
 \n\n
    Unless required by applicable law or agreed to in writing, software
    distributed under these Licenses is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See each License for the specific language governing permissions and
    limitations under that License.</string>
    <string name="apache2">Copyright 2013 Autumn Bomb Apps\n\n
        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at
        \n \n
        http://www.apache.org/licenses/LICENSE-2.0
        \n\n
        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
        \n \n
        Greetings SteveC, DoorToDoorGeek, Dirty Thumbs, SiliconWrench, DopePedaler, frzbgolfer. Thank you for the support!</string>

</resources>
