<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
        >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
              
    <TextView
        android:id="@+id/HRC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/rootcheckImage"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/rootcheck"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/copyHRC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/copyright"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/showHoloRootCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:layout_gravity="center" />

    <ImageView
        android:id="@+id/split"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/miniline_separator" />
    
    <TextView
        android:id="@+id/opensource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/library"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    


    <Button
        android:id="@+id/showRootTools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:layout_gravity="center" />
    
    
    </LinearLayout>
    </ScrollView>
